WIP: Bump MRI upstreams
Adopt latest versions, namely;
- odlparent-9.0.2
- yangtools-7.0.2-SNAPSHOT
- infrautils-2.0.2
- mdsal-8.0.0-SNAPSHOT
- controller-4.0.0-SNAPSHOT
- aaa-0.14.0-SNAPSHOT

// FIXME: finish restconf conversion
// FIXME: netconf data/revision tests

Change-Id: Ic4cbc01d88134df26416cd2d6f3e7ac64a03dc1a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>